--log-mongo and --log-xml not working